# ShadersRobots

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform2.yml
BlenderScripts/: Export_Map_1_0.txt
Cookbook/: CMakeLists.txt
Data/: test.max  zep.mtl
Data/Models/: chess_fou.mtl  chess_queen.mtl  map.txt
Data/Shaders/11 Lighting/01 Rendering a geometry with vertex diffuse lighting/: a.spv  shader.frag
MaximEngine/: CMakeLists.txt  Cell.cpp  Cell.h  DMaze.cpp  DMaze.h  Graphics.cpp  Graphics.h  IGrid.h  Makefile2  Map.hpp  MazeGenerator.cpp  MazeGenerator.h  ModelClass.cpp  ModelClass.h  Picking.h  Scene.cpp  Scene.h  SeedGenerator.cpp  SeedGenerator.h  WilsonMazeGenerator.cpp  WilsonMazeGenerator.h
MaximEngine/Chess/: ChessBoard.h  ChessMesh.h  ChessPart.h  ChessPartCase.h  ChessPartCavalier.h  ChessPartFou.h  ChessPartKing.h  ChessPartPion.h  ChessPartQueen.h  ChessPartTour.h  MinMaxAlgo.cpp  MinMaxAlgo.h  Projet_Classes_1.puml  Tree.h  TreeNode.h
MaximEngine/TextEngine/: Glyph.hpp  LetterObj.hpp
Samples/Common_Files/: Camera.cpp  CookbookSampleFramework.cpp  CookbookSampleFramework.h  FollowingCamera.cpp  FollowingCamera.h  OS.cpp  OS.h  OrbitingCamera.cpp  Raycast.h
Samples/Source_Files/11_Lighting/02-Rendering_a_geometry_with_fragment_specular_lighting/: main.cpp
Samples/Source_Files/12 Advanced Rendering Techniques/06-Using_input_attachment_for_color_correction_postprocess_effect/: main.cpp
Samples/Source_Files/Other/: main_02.cpp
Samples/Source_Files/Other/01-Creating_Logical_Device/: main.cpp
Samples/Source_Files/Other/03-Using_Render_Passes/: main.cpp
Samples/Source_Files/Other/04-Using_Graphics_Pipeline/: main.cpp
combiner/: CMakeLists.txt  combiner.cpp
